# DocumentIndex

./: .env_example  .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml
docs/: AAPL_10-K_2024-11-01.md  AAPL_10-K_2024-11-01.txt
examples/: basic_usage.py  caching_example.py  multi_provider_example.py  provenance_patterns.py  searcher_showcase.py  streaming_example.py
skills/: README.md  Skills_Transformation_Guide.md  agentic-qa.md  document-indexing.md  node-searching.md  provenance-extraction.md
skills/document-index/: SKILL.md  agentic-qa.md  document-indexing.md  node-searching.md  provenance-extraction.md
skills/document-index/examples/: README.md  agentic_qa_tutorial.py  indexer_deep_dive.py
src/documentindex/: __init__.py  agentic_qa.py  cache.py  chunker.py  cross_ref.py  detector.py  indexer.py  llm_client.py  metadata.py  models.py  provenance.py  searcher.py  streaming.py  utils.py
tests/: __init__.py  conftest.py  test_cache.py  test_chunker.py  test_cross_ref.py  test_detector.py  test_indexer.py  test_metadata.py  test_models.py  test_provenance.py  test_utils.py
