[project]
name = "documentindex"
version = "0.1.0"
description = "Lightweight hierarchical tree index for financial documents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jason Zhang"}
]
keywords = [
    "document-index",
    "financial-documents",
    "sec-filings",
    "rag",
    "llm",
    "tree-index",
    "hierarchical-index",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "litellm>=1.40.0",
    "tiktoken>=0.5.0",
    "aiofiles>=23.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "boto3>=1.42.36",
]

[project.optional-dependencies]
cache = [
    "redis>=5.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "documentindex[cache,dev]",
]

[project.urls]
Homepage = "https://github.com/yourusername/documentindex"
Documentation = "https://github.com/yourusername/documentindex#readme"
Repository = "https://github.com/yourusername/documentindex"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/documentindex"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
